--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# 过滤www/scripts文件夹下的文件
+.www/scripts/
+# 过滤node_modules文件夹下的文件
+.node_modules/
+
 # =========================
 # Operating System Files
 # =========================
