更改了忽略引用包文件夹的过滤规则

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ $RECYCLE.BIN/
 # 过滤www/scripts文件夹下的文件
 .www/scripts/
 # 过滤node_modules文件夹下的文件
-.node_modules/
+/node_modules/
 
 # =========================
 # Operating System Files
